--- a/source/Drey.Runtime/Drey.Runtime.csproj
+++ b/source/Drey.Runtime/Drey.Runtime.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -62,7 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Drey\Drey.csproj">
-      <Project>{6403704c-14d9-4069-ad3d-8eeef95f499c}</Project>
+      <Project>{6403704C-14D9-4069-AD3D-8EEEF95F499C}</Project>
       <Name>Drey</Name>
     </ProjectReference>
   </ItemGroup>
@@ -95,12 +95,12 @@
        Other similar extension points exist, see Microsoft.Common.targets.
   -->
   <Target Name="BeforeBuild">
-    <Delete Files="@(BuildArtifacts -> '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
+    <Delete Files="@(BuildArtifacts -&gt; '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
   </Target>
   <Target Name="AfterBuild">
     <ItemGroup>
       <BuildArtifacts Include="$(OutputPath)*.*" />
     </ItemGroup>
-    <Copy SourceFiles="@(BuildArtifacts)" DestinationFiles="@(BuildArtifacts -> '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
+    <Copy SourceFiles="@(BuildArtifacts)" DestinationFiles="@(BuildArtifacts -&gt; '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
   </Target>
 </Project>
