--- a/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
+++ b/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\xunit.runner.msbuild.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.runner.msbuild.props" Condition="Exists('..\..\packages\xunit.runner.msbuild.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.runner.msbuild.props')" />
   <Import Project="..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
@@ -92,8 +92,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -111,6 +109,8 @@
       <HintPath>..\..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Net.Http.Formatting" />
+    <Reference Include="System.Web.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Directors\ListLogsDirectorTests.cs" />
@@ -139,19 +139,19 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\source\Drey.DomainModel\Drey.DomainModel.csproj">
-      <Project>{424b2437-2f2e-414c-a353-aa8bbbc6e052}</Project>
+      <Project>{424B2437-2F2E-414C-A353-AA8BBBC6E052}</Project>
       <Name>Drey.DomainModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\source\Drey.Server.Core\Drey.Server.Core.csproj">
-      <Project>{beb7292d-69ec-49f2-878c-c04ff16a72a2}</Project>
+      <Project>{BEB7292D-69EC-49F2-878C-C04FF16A72A2}</Project>
       <Name>Drey.Server.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\source\Drey.Server.Hubs\Drey.Server.Hubs.csproj">
-      <Project>{99bcb85b-a0fd-496e-b362-3aa60d296fb9}</Project>
+      <Project>{99BCB85B-A0FD-496E-B362-3AA60D296FB9}</Project>
       <Name>Drey.Server.Hubs</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\source\Drey.Server.NancyFx\Drey.Server.NancyFx.csproj">
-      <Project>{778eb32e-0bb0-494e-85fc-423b87a6b66f}</Project>
+      <Project>{778EB32E-0BB0-494E-85FC-423B87A6B66F}</Project>
       <Name>Drey.Server.NancyFx</Name>
     </ProjectReference>
   </ItemGroup>
