Replaced  with  for a sql select.  needs integration testing.

--- a/tests/Drey.Configuration.Tests/Drey.Configuration.Tests.csproj
+++ b/tests/Drey.Configuration.Tests/Drey.Configuration.Tests.csproj
@@ -130,6 +130,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Repositories\SqliteRepositories\" />
     <Folder Include="ServiceModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
