Extracted module info into a template and rendering it on both index and recycle app pages.

--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -210,6 +210,7 @@
     <EmbeddedResource Include="Views\Setup\ClientCertificate.cshtml" />
     <EmbeddedResource Include="Views\Home\recycleapp.cshtml" />
     <EmbeddedResource Include="Views\Home\recyclepending.cshtml" />
+    <EmbeddedResource Include="Views\Home\_AppletInfo.cshtml" />
     <None Include="Views\Web.config" />
     <None Include="web.config" />
   </ItemGroup>
