Adjustments to avoid the use of Console.WriteLine

--- a/source/Drey.Owin/Drey.Owin.csproj
+++ b/source/Drey.Owin/Drey.Owin.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="BufferContentIntoAMemoryStreamMiddleware.cs" />
     <Compile Include="GlobalExceptionMiddleware.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
