--- a/source/Drey.Server.Hubs/Drey.Server.Hubs.nuspec
+++ b/source/Drey.Server.Hubs/Drey.Server.Hubs.nuspec
@@ -22,5 +22,6 @@
   </metadata>
   <files>
     <file src="bin\$configuration$\Drey.Server.Hubs.dll" target="lib\net451" />
+    <file src="bin\$configuration$\Drey.Server.Hubs.XML" target="lib\net451" />
   </files>
 </package>
