--- a/source/Drey.Server.NancyFx/Drey.Server.NancyFx.nuspec
+++ b/source/Drey.Server.NancyFx/Drey.Server.NancyFx.nuspec
@@ -21,5 +21,6 @@
   </metadata>
   <files>
     <file src="bin\$configuration$\Drey.Server.NancyFx.dll" target="lib\net451" />
+    <file src="bin\$configuration$\Drey.Server.NancyFx.XML" target="lib\net451" />
   </files>
 </package>
