--- a/source/Drey.Server.WebApi/Drey.Server.WebApi.nuspec
+++ b/source/Drey.Server.WebApi/Drey.Server.WebApi.nuspec
@@ -19,5 +19,6 @@
   </metadata>
   <files>
     <file src="bin\$configuration$\Drey.Server.WebApi.dll" target="lib\net451" />
+    <file src="bin\$configuration$\Drey.Server.WebApi.XML" target="lib\net451" />
   </files>
 </package>
