Allows the ability to have a respected  folder that will not be affected by applet updates.

--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ApplicationHostNutConfiguration.cs" />
     <Compile Include="Nut\DefaultAppSetting.cs" />
     <Compile Include="Nut\DefaultConnectionString.cs" />
+    <Compile Include="Nut\DiscoveredLibraryOptions.cs" />
     <Compile Include="Nut\ExecutionMode.cs" />
     <Compile Include="Nut\IApplicationSettings.cs" />
     <Compile Include="Nut\IConnectionStrings.cs" />
