--- a/source/Drey.Runtime/App.config
+++ b/source/Drey.Runtime/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <clear />
-    <add key="WorkingDirectory" value="~/" />
-    <add key="drey.configuration.consoleport" value="8080" />
+    <clear/>
+    <add key="WorkingDirectory" value="~/"/>
+    <add key="drey.configuration.consoleport" value="8080"/>
     <add key="server.sslthumbprint" value="49E36DFA0583739725FEA1C22AB5A0FBA7B39756"/>
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
 </configuration>
